--- a/.github/workflows/flutter_web.yml
+++ b/.github/workflows/flutter_web.yml
@@ -8,14 +8,14 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     container:
       image:  cirrusci/flutter:beta
 
     steps:
     - uses: actions/checkout@v2
+      with: 
+        token: 'c480ff86c274683ac62de45e19ad3dec2a2c0aff'
     - name: Install dependencies
       run: flutter pub get
     - name: Build a Flutter Web Release
