--- a/.github/workflows/flutter_web.yml
+++ b/.github/workflows/flutter_web.yml
@@ -11,6 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
+    - uses: actions/checkout@v2
     - uses: actions/setup-java@v1
       with:
         java-version: '12.x'
@@ -18,13 +19,11 @@ jobs:
       with:
         flutter-version: '1.18.0-11.1.pre' 
         channel: 'beta'
-    - run: flutter config --enable-web
-    - run: flutter pub get
-    - run: flutter test
-    - uses: actions/checkout@v2
-    - name: Install dependencies
+    - name: Habilitar ambiente Web
+      run: flutter config --enable-web
+    - name: Resolver dependencias
       run: flutter pub get
-    - name: Build a Flutter Web Release
+    - name: Rodar Testes
+      run: flutter test
+    - name: Buildar um Flutter Web Release
       run: flutter build web --release
-#     - name: Copiar conteudo da pasta Web
-#       run: cp -r ./build/web/* ./docs
