Novo teste do Flutter Web Action CI

--- a/android/local.properties
+++ b/android/local.properties
@@ -1,2 +1,2 @@
-sdk.dir=/usr/local/lib/android/sdk
-flutter.sdk=/opt/hostedtoolcache/flutter/1.18.0-11.1.pre-beta/x64
+sdk.dir=C:\\Users\\matheus.torreao\\AppData\\Local\\Android\\Sdk
+flutter.sdk=C:\\src\\flutter
