--- a/.github/workflows/flutter_web.yml
+++ b/.github/workflows/flutter_web.yml
@@ -1,4 +1,4 @@
-name: Dart CI
+name: Flutter Web CI
 
 on:
   push:
@@ -7,12 +7,33 @@ on:
     branches: [ master ]
 
 jobs:
+  tests:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout da branch
+      uses: actions/checkout@v2
+    - name: Inicializar Java
+      uses: actions/setup-java@v1
+      with:
+        java-version: '12.x'
+    - name: Inicializando Flutter
+      uses: subosito/flutter-action@v1.3.2
+      with:
+        channel: 'stable'
+    - name: Resolver dependencias
+      run: flutter pub get
+#     - name: Rodar Testes
+#       run: flutter test
+
   build:
     runs-on: ubuntu-latest
     
     steps:
-    - uses: actions/checkout@v2
-    - uses: actions/setup-java@v1
+    - name: Checkout da branch
+      uses: actions/checkout@v2
+    - name: Inicializar Java
+      uses: actions/setup-java@v1
       with:
         java-version: '12.x'
     - name: Inicializando Flutter
@@ -37,6 +58,6 @@ jobs:
         push-branch: 'master'
         commit-message: 'Deploy Web'
         force-add: 'true'
-        files: ./build/web/*
+        files: ./docs/*
         name: Github Actions
         email: mtorreao1@gmail.com
