--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,9 +18,10 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.8.0 <3.0.0"
 
 dependencies:
+  hive: ^1.4.1+1
   dio: ^3.0.9
   flutter_mobx: ^1.1.0
   mobx: ^1.2.1
@@ -33,11 +34,15 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
 
 dev_dependencies:
+  hive_generator: ^0.7.0+2
   mockito: ^4.1.1
   mobx_codegen: ^1.1.0
   build_runner: ^1.10.0
   flutter_test:
     sdk: flutter
+
+dependency_overrides:
+  dartx: ^0.4.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
