--- a/.github/workflows/flutter_web.yml
+++ b/.github/workflows/flutter_web.yml
@@ -32,6 +32,8 @@ jobs:
     steps:
     - name: Checkout da branch
       uses: actions/checkout@v2
+      with:
+          submodules: true
     - name: Inicializar Java
       uses: actions/setup-java@v1
       with:
@@ -61,3 +63,16 @@ jobs:
         files: ./docs/*
         name: Github Actions
         email: mtorreao1@gmail.com
+    - name: Build And Deploy
+      id: builddeploy
+      uses: Azure/static-web-apps-deploy@v0.0.1-preview
+      with:
+        azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN_NICE_POND_07FBDDA0F }}
+        repo_token: ${{ secrets.GITHUB_TOKEN }} # Used for Github integrations (i.e. PR comments)
+        action: "upload"
+        ###### Repository/Build Configurations - These values can be configured to match you app requirements. ######
+        # For more information regarding Static Web App workflow configurations, please visit: https://aka.ms/swaworkflowconfig
+        app_location: "/docs" # App source code path
+        api_location: "api" # Api source code path - optional
+        app_artifact_location: "" # Built app content directory - optional
+        ###### End of Repository/Build Configurations ######
